Avoid scrollbars on resize.

--- a/war/css/main.css
+++ b/war/css/main.css
@@ -2,11 +2,13 @@
 html {
   background: white;
   height: 100%;
+  overflow: hidden;
 }
 body.main {
   background-color: #333;
   font-family: Arial;
   margin: 0;
+  overflow: hidden;
   padding: 0;
   position: relative;
   height: 100%;
@@ -125,7 +127,7 @@ a:hover {
 }
 .events-view-scroll {
   background: #fff;
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: scroll;
   position: relative;
   box-sizing: border-box;
@@ -137,7 +139,7 @@ a:hover {
   -webkit-user-select: none;
   position: absolute;
   box-sizing: border-box;
-  overflow-y: hidden;
+  overflow: hidden;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .day-banner {
